--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Harsh Zalavadiya</title>
   </head>
   <body>
-    <h1>Harsh's Testing Domain</h1>
+    <h1>Harsh Zalavadiya</h1>
+    <ul>
+      <li><a href="https://github.com/hc-oss">GitHub</li>
+    </ul>
   </body>
 </html>
