refactor: :recycle: added application list

--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Harsh Zalavadiya</title>
-  </head>
-  <body>
-    <h1>Harsh Zalavadiya</h1>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Harsh's Applications</title>
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="stylesheet" href="/style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      🧩 Harsh's Applications
+    </header>
+
     <ul>
-      <li><a href="https://github.com/hc-oss">GitHub</li>
+      <li><a tabindex="1" href="https://random.harsh.cloud">Random</a></li>
+      <li><a tabindex="1" href="https://json.harsh.cloud">JSON Viewer</a></li>
+      <li><a tabindex="1" href="https://diffy.harsh.cloud">Diff Viewer</a></li>
+      <li><a tabindex="1" href="https://convert.harsh.cloud/uri">URI</a></li>
+      <li><a tabindex="1" href="https://convert.harsh.cloud/base64">Base64</a></li>
     </ul>
-  </body>
+
+    <footer>
+      <a href="https://github.com/hc-oss/">GitHub</a>
+      <a href="https://foobars.in">About</a>
+    </footer>
+  </div>
+</body>
+
 </html>
